syntax = "proto3";

package ai.lzy.v1.iam;

option java_outer_classname = "IAM";
option java_package = "ai.lzy.v1.iam";

message Resource {
  string id = 1;
  string type = 2;
}

message Subject {
  string id = 1;
  string subject_type = 2;
}

message Credentials {
  string name = 1;
  string credentials = 2;
  string type = 3;
}

message AccessBinding {
  string role = 1;
  Subject subject = 2;
}

enum AccessBindingAction {
  UNSPECIFIED = 0;
  ADD = 1;
  REMOVE = 2;
}

message AccessBindingDelta {
  AccessBinding binding = 1;
  AccessBindingAction action = 2;
}